[package]
name = "password_generator"
version = "0.1.0"
authors = ["Peter Binnig <peter.binnig@gmx.de>"]

[dependencies]
rand = "0.3.0"
rust-crypto = "0.2.31"

[target.x86_64-pc-windows-gnu.dependencies]
rpassword = "0.0.6"

[target.i686-unknown-linux-gnu.dependencies]
rpassword = "0.0.6"

[target.x86_64-unknown-linux-gnu.dependencies]
rpassword = "0.0.6"

[target.arm-linux-androideabi.dependencies]
android_glue = { git = "https://github.com/tomaka/android-rs-glue" }
